tdf#160589: compare the correct OutDev with PageWindows

Change-Id: I29d9c60cac04536bb2d5ad2ed1c086c8e67a9f20
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166151
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>